--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,20 @@
     padding: 2% 0;
 }
 
+#intro
+{
+    margin-top:15%;
+    margin-bottom:25%;
+}
+
+#experience{
+    margin-bottom:10%;
+}
+
+#folio{
+    margin-bottom:25%;
+}
+
 .red
 {
     background-color:#FF4136;
@@ -37,8 +51,20 @@ body
     font-family: 'Barlow Semi Condensed', sans-serif;
     font-size: 2em;
     color: #000;    
-    
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1; 
+    animation-fill-mode: forwards;    
 }
+
+
+@keyframes fadeInAnimation { 
+0% { 
+    opacity: 0; 
+} 
+100% { 
+    opacity: 1; 
+ } 
+} 
 
 h2
 {
@@ -106,31 +132,29 @@ ul.contact li
 ---------------------------------------*/
 header.main_nav
 {
-    padding:1% 0;
+    padding:0;
     display:block;
 }
 
-.logo
+#logo
 {
-    margin: 5% auto;
-    text-align:center;
+    position:relative;
+    margin:0 auto;
+    height:15%;
+    width:15%;
 }
 
-.logo a
-{
-    font-size: 3em;
-    color: #111111;
-    text-decoration: none;
-    border: 3px solid #111111;
-    text-transform: uppercase;
-    padding:2px 10px 0 10px;
-    margin: 0;
+#logo img.top-logo{
+    position: absolute;
+    left:0;
+    -webkit-animation: opacity 0.5s ease-in-out;
+    -moz-animation: opacity 0.5s ease-in-out;
+    -o-transition: opacity 0.5s ease-in-out;
+    transition: opacity 0.5s ease-in-out;
 }
 
-.logo a:hover{
-    background-color: #111111;
-    color:#FF4136;
-    content:'R G K';
+#logo img.top-logo:hover {
+    opacity: 0;
 }
 
 /* Images & Media
@@ -138,6 +162,18 @@ header.main_nav
 img
 {
     max-width:100%;
+}
+
+.company-logos
+{
+    position: relative;
+}
+
+img.company-logo{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5%;
 }
 
 img.avatar
@@ -225,6 +261,19 @@ p.copyright
     font-size: 1em;
 }
 
+/* Fade 
+---------------------------------------*/
+.fade{
+    opacity:0;
+    transform:translate(0, 10vh);
+    transition : all 1s;
+}
+
+.fade.visible {
+    opacity:1;
+    transform:translate(0,0);
+}
+
 /* Media Queries 
 ---------------------------------------*/
 /* Larger than mobile */
@@ -232,6 +281,7 @@ p.copyright
 {
     h2.opening{font-size: 2em;}
     .logo a{font-size: 2em;}
+    .company-logos{margin-bottom:10%;}
     .main{padding-top:15%;}
     .portfolio img{margin-bottom:10%;}
     img.avatar{margin-top:20%;}
